# gnev

./: .clang-format  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  README.md  valgrind.supp
blocks/: dirt_path.json
material/: dirt_path_top.json
sample/: CameraController.cpp  CameraController.hpp  GlfwConveyor.cpp  GlfwConveyor.hpp  Vertex.hpp  VoxelTypeGravel.cpp  VoxelTypeGravel.hpp  VoxelTypeTest.cpp  VoxelTypeTest.hpp  main.cpp
sample/ChunkBased/: Container.cpp  Container.hpp
sample/shader/: fragment.fs  fragment_2d.fs  vertex.vs  vertex_2d.vs
sample/utils/: Worker.cpp  Worker.hpp
src/: Ctx.cpp  Ctx.hpp  Drawer.cpp  Drawer.hpp  Mat4x4.cpp  Mat4x4.hpp  Mat4x4Storage.cpp  Mat4x4Storage.hpp  MaterialPbr.hpp  MaterialPbrStorage.cpp  MaterialPbrStorage.hpp  Mesh.cpp  Mesh.hpp  Transform.cpp  Transform.hpp  TransformStorage.cpp  TransformStorage.hpp
src/base/: MaterialBaseStorage.hpp
src/block/: AttributeSettings.cpp  AttributeSettings.hpp  BlockTypeController.cpp  BlockTypeController.hpp
src/bufferStorage/: FixedSlot.hpp  FixedSlotStorage.hpp  IBufferAccessor.hpp  IndexManager.cpp  IndexManager.hpp
src/chunk/: Chunk.cpp  Chunk.hpp  ChunkBuilder.hpp  Mesh.cpp  Mesh.hpp  Voxel.hpp
src/chunk/builder/: BruteForce.hpp
src/chunk/voxel/: SolidBlock.hpp
src/data/: Attrib.hpp  AttribInfo.hpp  AttribType.hpp  Attribute.hpp  AttributeInfo.cpp  AttributeInfo.hpp  Chunk.cpp  Chunk.hpp  CubeChunk.hpp  Index.hpp  Mesh.hpp  PlateChunk.hpp  RectangleMap.hpp  Transform.cpp  Transform.hpp  TransformNode.cpp  TransformNode.hpp  TriangleMap.hpp  TriangleMapT.hpp  VertAttrib.hpp  Vertex.hpp  VertexAttribute.hpp  VertexAttributeInfo.hpp  VertexAttributeType.hpp  VertexContainer.cpp  VertexContainer.hpp  VertexContainerT.hpp  VertexInfo.cpp  VertexInfo.hpp
src/gl/: Buffer.cpp  Buffer.hpp  BufferAccessor.cpp  BufferAccessor.hpp  BufferArray.hpp  BufferArrayCoherent.hpp  BufferArrayView.hpp  BufferIndexMapView.hpp  BufferIndexMapViewElement.hpp  BufferResizable.hpp  BufferVector.hpp  BufferWrapper.hpp  Ctx.cpp  Ctx.hpp  Debug.hpp  EnumFmt.cpp  EnumFmt.hpp  GLBuffer.cpp  GLBuffer.hpp  GLBufferArray.cpp  GLBufferArray.hpp  GLBufferArrayT.hpp  GLBufferContinuousMap.hpp  GLBufferMap.hpp  GLBufferStructT.hpp  GLBufferVector.cpp  GLBufferVector.hpp  GLBufferVectorCoherent.cpp  GLBufferVectorCoherent.hpp  GLBufferVectorCoherentT.hpp  GLBufferVectorT.hpp  GLHandler.cpp  GLHandler.hpp  GLProgram.cpp  GLProgram.hpp  GLSampler.cpp  GLSampler.hpp  GLShader.cpp  GLShader.hpp  GLTexture.cpp  (+26 more)
src/gl/buffer/: Accessor.cpp  Accessor.hpp  Array.hpp  ArrayView.hpp  BufAccessor.hpp  BufAccessorConst.hpp  BufIterator.hpp  BufStorage.hpp  BufStorageIndexMap.hpp  BufStorageIterator.hpp  BufferAccessorMappedCoherent.cpp  BufferAccessorMappedCoherent.hpp  BufferAccessorSubData.cpp  BufferAccessorSubData.hpp  BufferAllocator.cpp  BufferAllocator.hpp  BufferAllocatorFragmented.cpp  BufferAllocatorFragmented.hpp  BufferElementManager.cpp  BufferElementManager.hpp  BufferHeap.hpp  BufferMemBlock.hpp  BufferMemManager.cpp  BufferMemManager.hpp  BufferMemManagerControlBlock.cpp  BufferMemManagerControlBlock.hpp  BufferMemManagerFragmented.cpp  BufferMemManagerFragmented.hpp  BufferMemoryBlock.hpp  BufferRange.hpp  BufferRangeAllocator.cpp  BufferRangeAllocator.hpp  BufferRangeControlBlock.cpp  BufferRangeControlBlock.hpp  ClientMap.hpp  ClientStorage.hpp  CoherentIndexMap.hpp  CoherentMap.hpp  CoherentStorage.hpp  CoherentStruct.hpp  (+21 more)
src/gl/container/: BufferAccessorMapped.cpp  BufferAccessorMapped.hpp  BufferAccessorSubData.cpp  BufferAccessorSubData.hpp  BufferAllocatorStorage.cpp  BufferAllocatorStorage.hpp  BufferArray.hpp  BufferPool.hpp  BufferPoolElement.hpp  BufferRawAccessorMapped.cpp  BufferRawAccessorMapped.hpp  BufferRawAccessorMappedCoherent.cpp  BufferRawAccessorMappedCoherent.hpp  BufferRawAccessorSubData.cpp  BufferRawAccessorSubData.hpp  BufferReflAccessor.hpp  BufferReflArray.hpp  BufferReflList.hpp  BufferReflManagedArray.hpp  BufferReflStructAccessor.hpp  BufferVector.hpp  (+6 more)
src/image/: Image.cpp  Image.hpp  ImageLoader.cpp  ImageLoader.hpp  ImageLoaderStb.cpp  ImageLoaderStb.hpp  ImageLoaderStbResult.cpp  ImageLoaderStbResult.hpp
src/material/: ImageLoaderStb.cpp  ImageLoaderStb.hpp  Material.hpp  MaterialDataPBR.cpp  MaterialDataPBR.hpp  MaterialFactory.cpp  MaterialFactory.hpp  MaterialMapPBR.hpp  MaterialPBR.hpp  MaterialTextureLoader.cpp  MaterialTextureLoader.hpp
src/mesh/: Mesh.hpp  SubMesh.hpp
src/shader/: ProgramBuilder.cpp  ProgramBuilder.hpp  ShaderBuilder.cpp  ShaderBuilder.cpp_old  ShaderBuilder.hpp_old
src/texture/: TextureChunk.cpp  TextureChunk.hpp  TextureController.cpp  TextureController.hpp
src/tool/: Camera.cpp  Camera.hpp  Material.cpp  Material.hpp  MaterialData.cpp  MaterialData.hpp  MaterialMap.cpp  MaterialMap.hpp  StbImageLoader.cpp  StbImageLoader.hpp  Transform.cpp  Transform.hpp  TransformMap.cpp  TransformMap.hpp
src/transform/: Transform.cpp  Transform.hpp  TransformGL.hpp  TransformStorage.hpp
src/util/: Array3d.hpp  ConstexprConcat.hpp  CtString.hpp  Cube.hpp  CubeContainer.hpp  Export.hpp  IndexManager.cpp  IndexManager.hpp  IndexStorage.cpp  IndexStorage.hpp  InstanceLogger.hpp  Log.cpp  Log.hpp  Logger.cpp  Logger.hpp  OperationResult.cpp  OperationResult.hpp  PoolManager.cpp  PoolManager.hpp  RangeManager.cpp  RangeManager.hpp  Ref.hpp  Reflection.hpp  SrcLoc.hpp  StrongRef.hpp  Util.hpp  WeakRef.hpp
src/view/: Camera.cpp  Camera.hpp  CameraDataGL.hpp
src/voxel/: Chunk.hpp  MeshBuilder.hpp  Region.hpp  SolidCube.hpp  Type.hpp  Voxel.cpp  Voxel.hpp  VoxelChunk.cpp  VoxelChunk.hpp  VoxelRect.hpp  VoxelRectangle.hpp  VoxelSide.hpp  VoxelSideMap.cpp  VoxelSideMap.hpp  VoxelType.cpp  VoxelType.hpp
src/voxel_v2/: Chunk.hpp  MeshProvider.hpp  MeshProviderGrid.hpp  Triangle.hpp  Voxel.hpp
test/: OpenGLContext.cpp  OpenGLContext.hpp
test/gl/: BufferResizable.cpp
test/manual/: Camera.cpp  Camera.hpp  GlfwWindow.cpp  GlfwWindow.hpp  Mat4x4.cpp  Mat4x4.hpp  main.cpp
test/shared/: OpenGLContext.cpp  OpenGLContext.hpp
(+183 files in other folders)
